Fixed ProjectCard text alignment.

--- a/Frontend/src/components/ProjectCard/ProjectCard.module.scss
+++ b/Frontend/src/components/ProjectCard/ProjectCard.module.scss
@@ -7,6 +7,7 @@
     border: 1px solid var(--c-grey-d10);
     border-radius: var(--border-radius-sm);
     text-decoration: none;
+    text-align: left;
 
     &::after {
         position: absolute;
